--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/jxandery/turing_slack#readme",
   "dependencies": {
+    "chai": "^3.4.1",
     "express": "^4.13.3",
-    "socket.io": "^1.3.7"
+    "mocha": "^2.3.4",
+    "pry": "^0.4.2",
+    "socket.io": "^1.3.7",
+    "supertest": "^1.1.0"
   }
 }
