setup: configure scripts for testing and starting server

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "turing school module 4: slack clone - using websockets build a node app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/mocha",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
