--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chai": "^3.4.1",
     "express": "^4.13.3",
     "mocha": "^2.3.4",
+    "moment": "^2.11.1",
     "pry": "^0.4.2",
     "socket.io": "^1.3.7",
     "supertest": "^1.1.0"
